# hero-synth

./: Cargo.toml  LICENSE  README.md  build.rs
components/wfgen/: Cargo.toml
components/wfgen/src/: lib.rs  main.rs  saw.rs
core/: Cargo.toml  build.rs
core/src/: freq.rs  lib.rs  oscillator.rs  panning.rs  processing.rs  types.rs
core/src/filter/: iir.rs  mod.rs
core/src/wavetable/: mod.rs  saw.rs
host/: Cargo.toml
host/src/: audio.rs  buffers.rs  host.rs  main.rs  midi.rs
host/src/midi/: decoder.rs  io.rs  messages.rs  mod.rs  types.rs
src/: consts.rs  lib.rs  main.rs  main_.rs  oscillator.rs  panning.rs  patch.rs  studio.rs  voice.rs
src/filter/: FIR.rs  IIR.rs  iir.rs  mod.rs
src/wavetable/: mod.rs  sin.rs
studio/: Cargo.toml
studio/src/: main.rs
studio/src/audio/: buffers.rs  mod.rs  processing.rs  types.rs
studio/src/control/: mod.rs
studio/src/engine/: events.rs  mod.rs
studio/src/midi/: decoder.rs  events.rs  io.rs  messages.rs  mod.rs  types.rs
studio/src/osc/: mod.rs
synth/: Cargo.toml  open-stage-control.js
synth/src/: lib.rs  patch.rs  synth.rs  voice.rs
wfgen/: Cargo.toml
wfgen/src/: main.rs  sin.rs
