[package]
name = "herosynth"
version = "0.1.0"
authors = ["Christian Perez-Llamas <cllamas@tripadvisor.com>"]
build = "build.rs"

[build-dependencies.wfgen]
path = "components/wfgen"

[dependencies]
portaudio =   "0.4.17"
docopt = "0.6.67"
rand = "0.3.8"
# serde = "0.4.3"
# serde_macros = "0.4.4"

[lib]
name = "herosynth"
path = "src/lib.rs"

[[bin]]
name = "herosynth"
path = "src/main.rs"
